flux/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-self-hosted-saas-app
  namespace: example-self-hosted-saas-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-self-hosted-saas-app
  template:
    metadata:
      labels:
        app: example-self-hosted-saas-app
    spec:
      containers:
        - name: example-self-hosted-saas-app
          image: harbor.local/example-self-hosted-saas-app/example-self-hosted-saas-app:03b8bae58322322e354ab75addb33f2996eeac1c # {"$imagepolicy": "example-self-hosted-saas-app:example-self-hosted-saas-app"}
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
